Elysia with pnpm importing database handler

--- a/packages/client/tsconfig.app.json
+++ b/packages/client/tsconfig.app.json
@@ -27,7 +27,8 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
+      "@starter-kit/database/*": ["../database/src/*"]
     }
   },
   "include": ["src"]
