--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@elysiajs/eden": "^1.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.5",
@@ -39,6 +40,7 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@starter-kit/database": "workspace:*",
+    "@starter-kit/server": "workspace:*",
     "@tanstack/react-router": "^1.97.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -67,9 +69,11 @@
     "@tanstack/router-devtools": "^1.97.23",
     "@tanstack/router-plugin": "^1.97.23",
     "@types/node": "^22.10.10",
+    "@types/pg": "^8.11.11",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "elysia": "^1.2.10",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
