--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,12 +14,15 @@
     "@starter-kit/database": "workspace:*",
     "@types/node": "^22.10.10",
     "@types/pg": "^8.11.11",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.0",
     "elysia": "^1.2.10",
-    "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   },
   "exports": {
     ".": "./src/index.ts"
+  },
+  "devDependencies": {
+    "tsx": "^4.19.2"
   }
 }
