--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -21,6 +21,6 @@
   "include": ["src/**/*"],                     // Include all .ts files in the src directory
   "exclude": ["node_modules"],
   "references": [
-    { "path": "../database" }
+    { "path": "../../packages/database" }
   ]
 }
