--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -6,14 +6,14 @@
   "types": "dist/auth.d.ts",
   "scripts": {
     "build": "tsc -b",
-    "dev": "tsc -b --watch",
-    "test": "jest"
+    "generate": "pnpx @better-auth/cli generate --output ../database/src/schema/auth.ts"
   },
   "dependencies": {
     "@starter-kit/database": "workspace:*",
     "better-auth": "^1.1.14"
   },
   "devDependencies": {
+    "@better-auth/cli": "^1.1.14",
     "@types/node": "^22.10.10",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
