--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -7,11 +7,12 @@
   },
   "dependencies": {
     "@repo/database": "workspace:*",
-    "better-auth": "^1.1.14"
+    "better-auth": "^1.1.14",
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
     "@better-auth/cli": "^1.1.14",
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.10.10",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
