--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@repo/auth": "workspace:*",
     "@repo/database": "workspace:*",
     "@repo/server": "workspace:*",
     "@tanstack/react-query": "^5.65.0",
