--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -17,6 +17,9 @@
     "skipLibCheck": true,
     "types": ["node"],
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
+    "jsxImportSource": "hono/jsx",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
